--- a/TS/Task8/tsconfig.json
+++ b/TS/Task8/tsconfig.json
@@ -13,6 +13,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "@pages/*": ["pages/*"],
+      "@type/*": ["types/*"]
+    },
 
     /* Linting */
     "strict": true,
